--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <div class="container">
       <h1>Today's Task</h1>
       <form>
-        <input type="text" id="title" placeholder="Task tittle" required />
+        <input type="text" id="title" placeholder="Enter task tittle" required />
         <button type="submit">+</button>
         <textarea
           id="description"
-          placeholder="Task Description ... "
+          placeholder="Enter task description ... "
           required
         ></textarea>
       </form>
